--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,14 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
 
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 
 <body class="mat-typography">
   <app-root></app-root>
   <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162154480-1"></script>
+  <script preconnect async="" src="https://www.googletagmanager.com/gtag/js?id=UA-162154480-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -22,6 +24,7 @@
 
     gtag('config', 'UA-162154480-1');
   </script>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
